[package]
name = "flight-computer"
version = "2.0.0"
edition = "2021"

[dependencies]
common = { git = "https://github.com/gt-space/luna.git", features = ["sequences"], branch = "dev/flight2" }
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
mmap-sync = "2.0.1"