[package]
name = "flight-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { git = "https://github.com/gt-space/luna.git", features = ["sequences"], branch = "dev/prvnt-10min-abort" }
postcard = { version = "1.0.8", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
mmap-sync = "2.0.1"

[profile.release]
debug = true
